# lokus

./: .env  .env.example  .eslintrc.json  .gitignore  .mcp.json  2025-10-14-for-help-configuring-mcp-servers-see-httpsdoc.txt  AFFECTED_FEATURES.md  ANSWER_DUAL_CONNECTION.md  APPSTORE_SETUP.md  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CHANGELOG_v1.3.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CROSS_PLATFORM_SUMMARY.md  DEPLOYMENT_PLAN.md  DEVELOPMENT.md  FIX_WORKSPACE_API.md  INSTALLATION.md  IROH_SYNC_FIXES.md  LEARNINGS.md  LICENSE  LOKUS_QUANTUM_ARCHITECTURE.md  MCP_AUTO_START_SYSTEM.md  MCP_DUAL_CONFIG.md  MCP_TOOLS_TEST_REPORT.md  MOBILE_ISSUES.md  NSF_REU_Sites_2026_Comprehensive_List.md  PERFORMANCE_OPTIMIZATIONS_SUMMARY.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PHASE_1_COMPLETION.md  PLUGIN_MANIFEST_V2_IMPLEMENTATION.md  PLUGIN_SYSTEM_SUMMARY.md  PRIVACY.md  Progress.md  QUANTUM_OPTIMIZATION_IMPLEMENTATION.md  QUICKSTART.md  README-WINDOWS-SETUP.md  (+54 more)
.claude/: settings.local.json
.clean-agent/: index-state.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: AUTO_UPDATE_SETUP.md  FUNDING.yml  pull_request_template.md
Lokus-Full-Scale-Test/: Feature Overview.md  Getting Started.md  Mathematics Showcase.md  Performance Tests.md  Programming Examples.md  README.md  Untitled Canvas.canvas  Untitled.md
Speech/: 01-main-demo-video.md  02-teaser-30sec.md  (+6 more)
src-tauri/: .mcp.json  Cargo.toml  Info.plist  PrivacyInfo.xcprivacy  build.rs  dmg-background-generator.html  embedded.provisionprofile  entitlements-appstore.plist  entitlements.plist  tauri.android.conf.json  tauri.appstore.conf.json  tauri.conf.json  tauri.ios.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/binaries/: lokus-stt-aarch64-apple-darwin
src-tauri/capabilities/: default.json  fs-home.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/mcp-bundle/: mcp-server.js
src-tauri/resources/mcp-bundle/: http-server-bundle.js  mcp-server.js
src-tauri/sidecar/lokus-stt/: Cargo.toml
src-tauri/sidecar/lokus-stt/src/: main.rs
src-tauri/src/: api_server.rs  audio.rs  auth.rs  block_index.rs  clipboard.rs  clipboard_platform.rs  credentials.rs  file_locking.rs  kanban.rs  lib.rs  logging.rs  main.rs  mcp.rs  mcp_embedded.rs  mcp_setup.rs  meeting_detector.rs  menu.rs  model_downloader.rs  notifications.rs  oauth_server.rs  plugins.rs  remote_logging.rs  schedule_blocks.rs  search.rs  search.test.rs  secure_storage.rs  stt_bridge.rs  system_monitor.rs  tasks.rs  theme.rs  transcription.rs  window_manager.rs  windows.rs
src-tauri/src-tauri/src/: main.rs
src-tauri/src/calendar/: commands.rs  mod.rs  models.rs  storage.rs
src-tauri/src/calendar/caldav/: client.rs
src-tauri/src/calendar/google/: api.rs  auth.rs
src-tauri/src/calendar/ical/: parser.rs
src-tauri/src/calendar/sync/: dedup.rs  engine.rs  fingerprint.rs  mod.rs  storage.rs
src-tauri/src/connections/: commands.rs  manager.rs  mod.rs
src-tauri/src/connections/gmail/: api.rs  auth.rs  mod.rs  models.rs  queue.rs  storage.rs
src-tauri/src/handlers/: files.rs  mod.rs  multimedia.rs  platform_files.rs  version_history.rs
src-tauri/src/macos/: bookmarks.rs  mod.rs
src-tauri/src/ocr/: mod.rs
src-tauri/src/pdf/: mod.rs
src-tauri/src/platform/: README.md  android.rs  clipboard.rs  errors.rs  examples.rs  ios.rs  linux.rs  macos.rs  mobile.rs  mod.rs  system_info.rs  windows.rs
src-tauri/src/sync/: IROH_V2_ARCHITECTURE.md  V2_QUICKSTART.md  commands_simple.rs  file_watcher.rs  git.rs  iroh.rs  iroh_v2_enterprise.rs  iroh_v2_minimal.rs  manager.rs  mod.rs  network_monitor.rs  provider.rs  retry_utils.rs  wrapper 2.rs  wrapper.rs
src-tauri/src/workspace/: management.rs  models.rs
(+1501 files in other folders)
