[package]
name = "lokus"
version = "1.0.2"
description = "Lokus - Modern Knowledge Management and Writing Platform"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lokus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
urlencoding = "2.1.3"
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-store = "2.4.0"
tauri-plugin-clipboard-manager = "2.0"
tokio = { version = "1", features = ["full"] }
regex = "1.0"
walkdir = "2.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
