[package]
name = "lokus"
version = "1.3.2"
description = "Lokus - Modern Knowledge Management and Writing Platform"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lokus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
urlencoding = "2.1.3"
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-store = "2.4.0"
tauri-plugin-clipboard-manager = "2"
tokio = { version = "1", features = ["full"] }
regex = "1.0"
walkdir = "2.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
tempfile = "3.8"
zip = "2.4"
sha2 = "0.10"
semver = "1.0"
num_cpus = "1.0"
keyring = "3.6"
tauri-plugin-deep-link = "2"
oauth2 = "4.4"
pkce = "0.2"
base64 = "0.22"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
tokio-util = "0.7"
dotenvy = "0.15"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
machine-uid = "0.4"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = "0.4"
tower-service = "0.3"
# Gmail integration dependencies
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "tokio1-rustls-tls"] }
mail-parser = "0.9"
mime = "0.3"
mailparse = "0.15"
quoted_printable = "0.5"
flate2 = "1.0"
async-trait = "0.1"
futures = "0.3"
once_cell = "1.19"
parking_lot = "0.12"
bincode = "1.3"
thiserror = "1.0"
axum = "0.7"
git2 = "0.18"
